chore(maven-build): merge tomcat version to root pom

--- a/client/core/pom.xml
+++ b/client/core/pom.xml
@@ -134,14 +134,14 @@
         <dependency>
           <groupId>org.apache.tomcat.embed</groupId>
           <artifactId>tomcat-embed-core</artifactId>
-          <version>7.0.39</version>
+          <version>${version.tomcat}</version>
           <scope>provided</scope>
         </dependency>
 
         <dependency>
           <groupId>org.apache.tomcat.embed</groupId>
           <artifactId>tomcat-embed-jasper</artifactId>
-          <version>7.0.39</version>
+          <version>${version.tomcat}</version>
           <scope>provided</scope>
         </dependency>
 
@@ -149,21 +149,21 @@
         <dependency>
           <groupId>org.apache.tomcat</groupId>
           <artifactId>tomcat-catalina</artifactId>
-          <version>7.0.39</version>
+          <version>${version.tomcat}</version>
           <scope>provided</scope>
         </dependency>
 
         <dependency>
           <groupId>org.apache.tomcat</groupId>
           <artifactId>tomcat-coyote</artifactId>
-          <version>7.0.39</version>
+          <version>${version.tomcat}</version>
           <scope>provided</scope>
         </dependency>
 
         <dependency>
           <groupId>org.apache.tomcat</groupId>
           <artifactId>tomcat-jasper</artifactId>
-          <version>7.0.39</version>
+          <version>${version.tomcat}</version>
           <scope>provided</scope>
         </dependency>
 
