--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -77,6 +77,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.jboss.shrinkwrap.resolver</groupId>
       <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
       <scope>test</scope>
@@ -95,13 +101,13 @@
       <version>1.17</version>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.camunda.bpm.identity</groupId>
       <artifactId>camunda-identity-ldap</artifactId>
       <version>${project.version}</version>
     </dependency>
-          
+
   </dependencies>
 
   <build>
