--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -246,9 +246,15 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.tomcat.maven</groupId>
-            <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.1</version>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>8.1.14.v20131031</version>
+            <configuration>
+              <webAppConfig>
+                <contextPath>/camunda</contextPath>
+                <defaultsDescriptor>${project.basedir}/src/main/runtime/develop/jetty/webdefault.xml</defaultsDescriptor>
+              </webAppConfig>
+            </configuration>
           </plugin>
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
@@ -284,10 +290,8 @@
       </build>
       <properties>
         <java.resources.override>src/main/runtime/develop/resources</java.resources.override>
-        <maven.tomcat.path>/camunda</maven.tomcat.path>
       </properties>
     </profile>
-
 
     <!-- database QA profiles -->
 
