feat(mvn/profile/distro-ce): Introduce new CE distro profile
A new profile "distro-ce" has been introduced to be able to handle the
difference between EE and CEE.

This new profile is activeByDefault = true.

relate to CAM-1420

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -14,13 +14,34 @@
     <relativePath>../..</relativePath>
   </parent>
 
-  <modules>
-    <module>core</module>
-    <module>webapp</module>
-    <module>tomcat</module>
-    <module>glassfish</module>
-    <module>jboss</module>
-  </modules>
+  <profiles>
+    <profile>
+      <id>distro</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <modules>
+
+        <module>core</module>
+        <module>webapp</module>
+
+      </modules>
+    </profile>
+
+    <profile>
+      <id>distro-ce</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <modules>
+
+        <module>jboss</module>
+        <module>tomcat</module>
+        <module>glassfish</module>
+
+      </modules>
+    </profile>
+  </profiles>
 
   <properties>
     <tomcat6.connector.http.port>48080</tomcat6.connector.http.port>
