--- a/client/webapp/bower.json
+++ b/client/webapp/bower.json
@@ -15,17 +15,14 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "http://code.angularjs.org/1.1.5/angular.js",
+    "angular": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js",
     "angular-resource": "./src/main/webapp/assets/patched/angular-resource.js",
-    "angular-sanitize": "http://code.angularjs.org/1.1.5/angular-sanitize.js",
-    "angular-cookies": "http://code.angularjs.org/1.1.5/angular-cookies.js",
-    "angular-loader": "http://code.angularjs.org/1.1.5/angular-loader.js",
-    "angular-mobile": "http://code.angularjs.org/1.1.5/angular-mobile.js",
-
-    "angular-bootstrap": "~0.5.0",
+    "angular-sanitize": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-sanitize.js",
+    "angular-cookies": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-cookies.js",
+    "angular-loader": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-loader.js",
+    "angular-mobile": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-mobile.js",
     "angular-data-depend": "camunda/angular-data-depend",
     "angular-ui": "~0.4.0",
-
     "better-dom": "~1.6.6",
     "better-placeholder-polyfill": "~1.1.1",
     "bootstrap": "~2.3.0",
@@ -43,8 +40,5 @@
   "devDependencies": {
     "angular-scenario": "http://code.angularjs.org/1.1.5/angular-scenario.js",
     "angular-mocks": "http://code.angularjs.org/1.1.5/angular-mocks.js"
-  },
-  "resolutions": {
-    "angular": "e-tag:52d6e9b4-"
   }
 }
