--- a/client/webapp/package.json
+++ b/client/webapp/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-watch": "~0.5.0",
+    "grunt-contrib-requirejs": "*",
     "grunt-jsdoc": "~0.5.0",
     "grunt-contrib-jshint": "~0.8.0",
     "requirejs": "~2.1.0",
