fix(cockpit/page reload): This commit improve several is supposed to fix the scope lost and page reload encounter when a link in the tabs is clicked.
It also improves (a bit) the javascript build tools and processes:

- use the [newer](http://npmjs.org/package/grunt-newer) to speed up the copying of watched files
- prevent the tests to be automatically runned when a file is changed
- allow livereload feature to be runned on a different port
- prevent the livereload snippet in require-conf.js to be parsed as a jsDoc comment block
- refactor the bootstraping modules of cockpit, admin and tasklist by moving some functions in the require-conf.js

--- a/client/webapp/package.json
+++ b/client/webapp/package.json
@@ -28,6 +28,7 @@
     "karma-ng-scenario": "*",
     "karma-requirejs": "~0.2.0",
     "karma-html2js-preprocessor": "~0.1.0",
-    "grunt-bower-task": "~0.3.4"
+    "grunt-bower-task": "~0.3.4",
+    "grunt-newer": "~0.6.1"
   }
 }
