--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -151,7 +151,7 @@
             </goals>
             <phase>generate-resources</phase>
             <configuration>
-              <arguments>build:production</arguments>
+              <arguments>build:dist</arguments>
             </configuration>
           </execution>
 
