--- a/client/webapp/bower.json
+++ b/client/webapp/bower.json
@@ -16,29 +16,32 @@
   ],
   "dependencies": {
     "angular": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js",
-    "angular-resource": "./src/main/webapp/assets/patched/angular-resource.js",
+    "angular-resource": "./src/main/webapp/assets/local/angular-resource-patched.js",
     "angular-sanitize": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-sanitize.js",
     "angular-cookies": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-cookies.js",
     "angular-loader": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-loader.js",
     "angular-mobile": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-mobile.js",
     "angular-data-depend": "camunda/angular-data-depend",
-    "angular-ui": "~0.4.0",
+    "angular-ui": "./src/main/webapp/assets/local/ui-bootstrap-dialog-tpls-0.5.0.js",
     "better-dom": "~1.6.6",
     "better-placeholder-polyfill": "~1.1.1",
-    "bootstrap": "~2.3.0",
+    "bootstrap": "./src/main/webapp/assets/local/bootstrap",
     "bootstrap-slider": "*",
     "camunda-bpmn.js": "camunda/camunda-bpmn.js",
-    "dojo": "./src/main/webapp/assets/patched/dojo",
-    "jquery": "~1.10",
+    "dojo": "./src/main/webapp/assets/local/dojo",
+    "jquery": "http://code.jquery.com/jquery-1.10.0.js",
     "jquery-mousewheel": "~3.1.9",
     "jquery-overscroll": "~1.7.3",
-    "jquery-ui": "./src/main/webapp/assets/patched/jquery-ui-1.10.3.custom.min.js",
+    "jquery-ui": "./src/main/webapp/assets/local/jquery-ui-1.10.3.custom.min.js",
     "requirejs-angular-define": "camunda/requirejs-angular-define",
-    "requirejs": "~2.1.10",
-    "requirejs-domready": "~2.0.1"
+    "requirejs": "http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js",
+    "requirejs-domready": "http://cdnjs.cloudflare.com/ajax/libs/require-domReady/2.0.1/domReady.min.js"
   },
   "devDependencies": {
     "angular-scenario": "http://code.angularjs.org/1.1.5/angular-scenario.js",
     "angular-mocks": "http://code.angularjs.org/1.1.5/angular-mocks.js"
+  },
+  "resolutions": {
+    "jquery": "e-tag:52d6c4e2-"
   }
 }
