--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -551,7 +551,24 @@
       </activation>
       <dependencies>
         <dependency>
-          <groupId>postgresql</groupId>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <scope>test</scope>
+        </dependency>
+       </dependencies>
+    </profile>
+
+    <profile>
+      <id>postgresql93</id>
+        <activation>
+        <property>
+          <name>database</name>
+          <value>postgresql93</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.postgresql</groupId>
           <artifactId>postgresql</artifactId>
           <scope>test</scope>
         </dependency>
