--- a/client/webapp/package.json
+++ b/client/webapp/package.json
@@ -30,8 +30,9 @@
     "karma-script-launcher": "~0.1.0",
     "karma-ie-launcher": "~0.1.0",
     "karma-jasmine": "~0.1.0",
-    "karma-ng-scenario": "*",
+    "karma-ng-scenario": "~0.1.0",
     "karma-requirejs": "~0.2.0",
-    "karma-html2js-preprocessor": "~0.1.0"
+    "karma-html2js-preprocessor": "~0.1.0",
+    "grunt-protractor-runner": "~0.2.3"
   }
 }
