--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -326,6 +326,18 @@
           <groupId>com.fasterxml.uuid</groupId>
           <artifactId>java-uuid-generator</artifactId>
         </dependency>
+        
+        <dependency>
+          <groupId>org.apache.tomcat</groupId>
+          <artifactId>tomcat-jdbc</artifactId>
+          <version>7.0.33</version>
+        </dependency>
+    
+        <dependency>
+          <groupId>org.apache.tomcat</groupId>
+          <artifactId>tomcat-juli</artifactId>
+          <version>7.0.33</version>
+        </dependency>
       </dependencies>
       <build>
         <plugins>
