fix(cockpit/style): avoid using cleancss compression
This commit improves the following grunt tasks:
 - Windows only, downloads and extracts selenium (and its dependencies)
   without using webdriver-manager
 - sets the "verbose" option of the bower task to "true" to ease
   debugging.
 - re-sets the CSS compression to "compress" instead of "cleancss"

Related to: CAM-1713

--- a/client/webapp/package.json
+++ b/client/webapp/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "setup": {
-    "seleniumDownloadURL": "http://selenium-release.storage.googleapis.com/2.40/selenium-server-standalone-2.40.0.jar"
+    "seleniumDownloadURL": "http://selenium-release.storage.googleapis.com/2.40/selenium-server-standalone-2.40.0.jar",
+    "internetExplorerDriverDownloadURL": "http://selenium-release.storage.googleapis.com/2.40/IEDriverServer_Win32_2.40.0.zip",
+    "chromeDriverDownloadURL": "http://chromedriver.storage.googleapis.com/2.9/chromedriver_win32.zip"
   },
   "devDependencies": {
     "grunt": "~0.4.0",
@@ -36,6 +38,8 @@
     "karma-ng-scenario": "~0.1.0",
     "karma-requirejs": "~0.2.0",
     "karma-html2js-preprocessor": "~0.1.0",
-    "grunt-protractor-runner": "~0.2.3"
+    "grunt-protractor-runner": "~0.2.3",
+    "unzip": "~0.1.9",
+    "async": "~0.2.10"
   }
 }
