--- a/client/webapp/bower.json
+++ b/client/webapp/bower.json
@@ -21,15 +21,15 @@
     "angular-cookies": "http://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-cookies.js",
     "angular-data-depend": "camunda/angular-data-depend",
     "angular-ui": "./src/main/webapp/assets/local/ui-bootstrap-dialog-tpls-0.5.0.js",
-    "better-dom": "~1.6.6",
-    "better-placeholder-polyfill": "~1.1.1",
+    "better-dom": "1.6.6",
+    "better-placeholder-polyfill": "1.1.1",
     "bootstrap": "./src/main/webapp/assets/local/bootstrap",
     "bootstrap-slider": "*",
     "camunda-bpmn.js": "camunda/camunda-bpmn.js",
     "dojo": "./src/main/webapp/assets/local/dojo",
-    "jquery": "http://code.jquery.com/jquery-1.10.0.js",
-    "jquery-mousewheel": "~3.1.9",
-    "jquery-overscroll-fixed": "*",
+    "jquery": "http://code.jquery.com/jquery-1.11.0.js",
+    "jquery-mousewheel": "https://raw.github.com/brandonaaron/jquery-mousewheel/09bb82c73c5650812e36dfd27d605d64d3ed32b8/jquery.mousewheel.js",
+    "jquery-overscroll-fixed": "https://raw.github.com/azoff/overscroll/1579345a5d7cf2601a290e64d04aaa2a22449cac/src/jquery.overscroll.js",
     "jquery-ui": "./src/main/webapp/assets/local/jquery-ui-1.10.3.custom.min.js",
     "requirejs-angular-define": "camunda/requirejs-angular-define",
     "requirejs": "http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js",
@@ -38,8 +38,5 @@
   "devDependencies": {
     "angular-scenario": "http://code.angularjs.org/1.1.5/angular-scenario.js",
     "angular-mocks": "http://code.angularjs.org/1.1.5/angular-mocks.js"
-  },
-  "resolutions": {
-    "jquery": "e-tag:52d6c4e2-"
   }
 }
