chore(webapp/admin): AdminContainerBootstrap
- add AdminContainerBootstrap to mirror cockpit bootstrap

related to #CAM-1961

--- a/client/core/pom.xml
+++ b/client/core/pom.xml
@@ -210,6 +210,13 @@
               </execution>
             </executions>
           </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <redirectTestOutputToFile>true</redirectTestOutputToFile>
+            </configuration>
+          </plugin>
         </plugins>
       </build>
     </profile>
