--- a/client/tomcat-standalone/pom.xml
+++ b/client/tomcat-standalone/pom.xml
@@ -29,6 +29,10 @@
       <artifactId>camunda-engine-spring</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.camunda.bpm.identity</groupId>
+      <artifactId>camunda-identity-ldap</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
     </dependency>
