--- a/client/tomcat-standalone/pom.xml
+++ b/client/tomcat-standalone/pom.xml
@@ -44,6 +44,10 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.uuid</groupId>
+      <artifactId>java-uuid-generator</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
