chore(unit test): enable unit testing with jasmin_node

--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -4,6 +4,7 @@
     "element": false,
     "by": false,
     "describe": false,
+    "xdescribe": false,
     "ddescribe": false,
     "it": false,
     "xit": false,
