--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,7 @@
     "grunt-newer": "~0.7.0",
     "underscore": "~1.6.0",
     "uuid": "~1.4.1",
-    "fixturer": "zeropaper/fixturer",
+    "fixturer": "camunda-third-party/fixturer",
     "underscore.string": "~2.3.3",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
@@ -53,7 +53,9 @@
     "karma-requirejs": "~0.2.1",
     "requirejs": "~2.1.11",
     "grunt-conventional-changelog": "~1.1.0",
-    "grunt-seleniuminstall": "git+https://github.com/zeropaper/grunt-seleniuminstall.git",
-    "cheerio": "~0.16.0"
+    "grunt-seleniuminstall": "camunda-third-party/grunt-seleniuminstall.git",
+    "cheerio": "~0.16.0",
+    "q": "~1.0.1",
+    "jquery": "~2.1.1"
   }
 }
