--- a/client/bower.json
+++ b/client/bower.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "camunda-tasklist",
-  "version": "0.0.1",
+  "version": "7.2.0-SNAPSHOT",
   "homepage": "https://github.com/camunda/camunda-tasklist",
   "authors": [
     "Valentin Vago <valentin.vago@camunda.com>"
@@ -36,8 +36,7 @@
     "angular-moment": "~0.7.0",
     "requirejs-domready": "~2.0.1",
     "angular-bootstrap": "~0.11.0",
-    "angular-route": "~1.2.16",
-    "angular-messages": "~1.3.0-build.2771+sha.4eb9522"
+    "angular-route": "~1.2.16"
   },
   "devDependencies": {
     "jquery-mockjax": "~1.5.3",
@@ -48,7 +47,6 @@
     "requirejs-text": "~2.0.12"
   },
   "resolutions": {
-    "jquery": "~2.1.1",
-    "angular": "1.2.16"
+    "jquery": "~2.1.1"
   }
 }
