--- a/client/bower.json
+++ b/client/bower.json
@@ -29,7 +29,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.1.1",
-    "hyperagent": "zeropaper/hyperagent",
+    "hyperagent": "*",
     "angular": "~1.2.16",
     "jquery": "~2.1.1",
     "angular-ui-bootstrap": "~0.11.0",
