fix(package): change grunt path for the npm scripts
If using the relative path, the build will fail in the platform.

Just an other attempt.. (unfortunately not possible to test without
pushing to the repo).

--- a/client/package.json
+++ b/client/package.json
@@ -24,40 +24,42 @@
     "url": "https://github.com/camunda/camunda-tasklist-ui/issues"
   },
   "homepage": "https://github.com/camunda/camunda-tasklist-ui",
-  "devDependencies": {
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-requirejs": "~0.4.4",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-less": "~0.11.0",
-    "grunt-jsdoc": "~0.5.4",
-    "grunt-jasmine-node": "~0.2.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-karma": "~0.8.3",
-    "grunt-protractor-runner": "~0.2.4",
-    "time-grunt": "~0.3.1",
-    "load-grunt-tasks": "~0.4.0",
+  "dependencies": {
+    "amdefine": "~0.1.0",
+    "cheerio": "~0.16.0",
+    "fixturer": "camunda-third-party/fixturer",
     "grunt": "~0.4.5",
     "grunt-bower-task": "~0.3.4",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-connect": "~0.7.1",
-    "amdefine": "~0.1.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-less": "~0.11.0",
+    "grunt-contrib-requirejs": "~0.4.4",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-conventional-changelog": "~1.1.0",
+    "grunt-jasmine-node": "~0.2.1",
+    "grunt-jsdoc": "~0.5.4",
+    "grunt-karma": "~0.8.3",
     "grunt-newer": "~0.7.0",
-    "underscore": "~1.6.0",
-    "uuid": "~1.4.1",
-    "fixturer": "camunda-third-party/fixturer",
-    "underscore.string": "~2.3.3",
+    "grunt-protractor-runner": "~0.2.4",
+    "grunt-seleniuminstall": "camunda-third-party/grunt-seleniuminstall",
+    "jquery": "~2.1.1",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
+    "karma-ie-launcher": "~0.1.5",
     "karma-jasmine": "~0.1.5",
     "karma-phantomjs-launcher": "~0.1.4",
-    "karma-ie-launcher": "~0.1.5",
     "karma-requirejs": "~0.2.1",
-    "requirejs": "~2.1.11",
-    "grunt-conventional-changelog": "~1.1.0",
-    "grunt-seleniuminstall": "camunda-third-party/grunt-seleniuminstall.git",
-    "cheerio": "~0.16.0",
+    "load-grunt-tasks": "~0.4.0",
     "q": "~1.0.1",
-    "jquery": "~2.1.1",
-    "grunt-cli": "~0.1.13"
+    "requirejs": "~2.1.11",
+    "time-grunt": "~0.3.1",
+    "underscore": "~1.6.0",
+    "underscore.string": "~2.3.3",
+    "uuid": "~1.4.1"
+  },
+  "devDependencies": {
   }
 }
