--- a/client/bower.json
+++ b/client/bower.json
@@ -36,7 +36,8 @@
     "angular-moment": "~0.7.0",
     "requirejs-domready": "~2.0.1",
     "angular-bootstrap": "~0.11.0",
-    "angular-route": "~1.2.16"
+    "angular-route": "~1.2.16",
+    "angular-animate": "~1.2.16"
   },
   "devDependencies": {
     "jquery-mockjax": "~1.5.3",
@@ -47,6 +48,7 @@
     "requirejs-text": "~2.0.12"
   },
   "resolutions": {
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular": "1.2.16"
   }
 }
