--- a/client/.bowerrc
+++ b/client/.bowerrc
@@ -1,3 +1,4 @@
 {
-  "directory": "client/bower_components"
+  "directory": "client/bower_components",
+  "storage":{ "packages":".bower_packages" }
 }
