--- a/client/package.json
+++ b/client/package.json
@@ -58,7 +58,8 @@
     "time-grunt": "~0.3.1",
     "underscore": "~1.6.0",
     "underscore.string": "~2.3.3",
-    "uuid": "~1.4.1"
+    "uuid": "~1.4.1",
+    "camunda-bpm-sdk-js": "git+ssh://git@github.com:camunda/camunda-bpm-sdk-js"
   },
   "devDependencies": {
     "time-grunt": "~0.3.2",
