--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,11 +7,13 @@
   <packaging>pom</packaging>
   <name>camunda BPM - webapp - root</name>
 
+  <!-- camunda BPM parent -->
   <parent>
     <groupId>org.camunda.bpm</groupId>
     <artifactId>camunda-parent</artifactId>
-    <relativePath>../../parent</relativePath>
     <version>7.2.0-SNAPSHOT</version>
+    <!-- do not remove empty tag - http://jira.codehaus.org/browse/MNG-4687 -->
+    <relativePath />
   </parent>
 
   <profiles>
@@ -36,12 +38,12 @@
       </activation>
       <modules>
 
-        <module>jboss</module>
-        <module>jboss-standalone</module>
-        <module>tomcat</module>
-        <module>tomcat-standalone</module>
-        <module>glassfish</module>
-        <module>glassfish-standalone</module>
+        <module>distro/jboss</module>
+        <module>distro/jboss-standalone</module>
+        <module>distro/tomcat</module>
+        <module>distro/tomcat-standalone</module>
+        <module>distro/glassfish</module>
+        <module>distro/glassfish-standalone</module>
 
       </modules>
     </profile>
