--- a/client/bower.json
+++ b/client/bower.json
@@ -20,7 +20,7 @@
     "better-dom": "1.6.6",
     "better-placeholder-polyfill": "1.1.1",
     "camunda-bpmn.js": "camunda/camunda-bpmn.js",
-    "camunda-commons-ui": "./../camunda-commons-ui",
+    "camunda-commons-ui": "camunda/camunda-commons-ui",
     "dojo": "./vendor/dojo/dojo",
     "dojox": "./vendor/dojo/dojox",
     "jquery-mousewheel": "https://raw.github.com/brandonaaron/jquery-mousewheel/09bb82c73c5650812e36dfd27d605d64d3ed32b8/jquery.mousewheel.js",
