--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
   },
   "gruntConfig": {
     "connectPort": 9090,
-    "liverreloadPort": 9091,
+    "livereloadPort": 9091,
     "clientDir": "client",
     "prodTarget": "dist",
     "devTarget":  "dist/app/cockpit"
