--- a/client/distro/jboss/pom.xml
+++ b/client/distro/jboss/pom.xml
@@ -26,7 +26,7 @@
 
     <resources>
       <resource>
-        <directory>../webapp/src/main/runtime/jboss/resources</directory>
+        <directory>../../webapp/src/main/runtime/jboss/resources</directory>
         <filtering>true</filtering>
       </resource>
     </resources>
@@ -48,7 +48,7 @@
           </archive>
           <webResources>
             <resource>
-              <directory>../webapp/src/main/runtime/jboss/webapp</directory>
+              <directory>../../webapp/src/main/runtime/jboss/webapp</directory>
             </resource>
           </webResources>
         </configuration>
