--- a/client/distro/glassfish-standalone/pom.xml
+++ b/client/distro/glassfish-standalone/pom.xml
@@ -4,6 +4,7 @@
     <artifactId>camunda-webapp-root</artifactId>
     <groupId>org.camunda.bpm.webapp</groupId>
     <version>7.2.0-SNAPSHOT</version>
+    <relativePath>../..</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
