--- a/client/distro/tomcat/pom.xml
+++ b/client/distro/tomcat/pom.xml
@@ -4,8 +4,9 @@
     <artifactId>camunda-webapp-root</artifactId>
     <groupId>org.camunda.bpm.webapp</groupId>
     <version>7.2.0-SNAPSHOT</version>
+    <relativePath>../..</relativePath>
   </parent>
-  
+
   <modelVersion>4.0.0</modelVersion>
   <name>camunda BPM - webapp - Tomcat</name>
   <artifactId>camunda-webapp-tomcat</artifactId>
