fix(core/test): javax.activation dependency

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -91,7 +91,12 @@
         <scope>import</scope>
         <type>pom</type>
       </dependency>
-      </dependencies>
+      <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1</version>
+      </dependency>
+    </dependencies>
   </dependencyManagement>
 
 </project>
