--- a/client/core/pom.xml
+++ b/client/core/pom.xml
@@ -80,6 +80,12 @@
       <version>1.17</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
