fix(build): run bower install outside of grunt after install

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "main": "client/scripts/index.js",
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt jasmine_node",
-    "dist": "./node_modules/grunt-cli/bin/grunt build:prod"
+    "dist": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt build:prod"
   },
   "repository": {
     "type": "git",
