--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -21,6 +21,7 @@
     
     <frontend.development.cockpit.path>../../camunda-cockpit-ui/dist</frontend.development.cockpit.path>
     <frontend.development.tasklist.path>../../camunda-tasklist-ui/dist</frontend.development.tasklist.path>
+    <frontend.development.admin.path>../../camunda-admin-ui/dist</frontend.development.admin.path>
 
     <exec.shell>bash</exec.shell>
     <exec.arg>-c</exec.arg>
@@ -44,7 +45,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- the tasklist UI -->
+    <!-- the cockpit UI -->
     <dependency>
       <groupId>org.camunda.bpm.webapp</groupId>
       <artifactId>camunda-cockpit-ui</artifactId>
@@ -52,7 +53,16 @@
       <type>zip</type>
       <scope>provided</scope>
     </dependency>
-    
+
+    <!-- the admin UI -->
+    <dependency>
+      <groupId>org.camunda.bpm.webapp</groupId>
+      <artifactId>camunda-admin-ui</artifactId>
+      <version>${project.version}</version>
+      <type>zip</type>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- cockpit plugins -->
     <dependency>
       <groupId>org.camunda.bpm.cockpit</groupId>
@@ -228,6 +238,13 @@
                   <overWrite>true</overWrite>
                   <outputDirectory>${project.build.directory}/webapp/app/cockpit</outputDirectory>
                 </artifactItem>
+                <artifactItem>
+                  <groupId>org.camunda.bpm.webapp</groupId>
+                  <artifactId>camunda-admin-ui</artifactId>
+                  <type>zip</type>
+                  <overWrite>true</overWrite>
+                  <outputDirectory>${project.build.directory}/webapp/app/admin</outputDirectory>
+                </artifactItem>
               </artifactItems>
             </configuration>
            </execution>
@@ -357,6 +374,7 @@
                   <resourceBase>${project.basedir}/src/main/webapp</resourceBase>
                   <resourceBase>${frontend.development.cockpit.path}</resourceBase>
                   <resourceBase>${frontend.development.tasklist.path}</resourceBase>
+                  <resourceBase>${frontend.development.admin.path}</resourceBase>
                 </resourceBases>
               </webAppConfig>
             </configuration>
