--- a/client/distro/jboss-standalone/pom.xml
+++ b/client/distro/jboss-standalone/pom.xml
@@ -53,6 +53,14 @@
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.camunda.template-engines</groupId>
+      <artifactId>camunda-template-engines-freemarker</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
