--- a/client/bower.json
+++ b/client/bower.json
@@ -32,6 +32,7 @@
     "angular-animate": "~1.2.16",
     "angular-bootstrap": "~0.11.0",
     "angular-cookies": "~1.2.16",
+    "angular-data-depend": "camunda/angular-data-depend",
     "angular-resource": "~1.2.16",
     "angular-route": "~1.2.16",
     "angular-sanitize": "~1.2.16",
@@ -39,8 +40,11 @@
     "better-dom": "1.6.6",
     "better-placeholder-polyfill": "1.1.1",
     "bootstrap": "~3.1.1",
+    "camunda-bpmn.js": "camunda/camunda-bpmn.js",
     "camunda-commons-ui": "camunda/camunda-commons-ui",
     "jquery": "~2.1.1",
+    "jquery-mousewheel": "https://raw.github.com/brandonaaron/jquery-mousewheel/09bb82c73c5650812e36dfd27d605d64d3ed32b8/jquery.mousewheel.js",
+    "jquery-overscroll-fixed": "https://raw.github.com/azoff/overscroll/1579345a5d7cf2601a290e64d04aaa2a22449cac/src/jquery.overscroll.js",
     "jquery.ui": "~1.10.4",
     "requirejs": "http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js",
     "requirejs-angular-define": "camunda/requirejs-angular-define",
