chore(admin): remove test script

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "7.2.0-SNAPSHOT",
   "private": true,
   "scripts": {
-    "test": "./node_modules/grunt-cli/bin/grunt jasmine_node",
+    "test": "",
     "dist": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt build:prod"
   },
   "gruntConfig": {
